tests/baselines/reference/directReferenceToNull.errors.txt
==== tests/cases/conformance/types/primitives/null/directReferenceToNull.ts (1 errors) ====
    var x: Null;
           ~~~~
!!! error TS2304: Cannot find name 'Null'.